--- a/src/app/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/molecules/edit-toggle/edit-toggle.component.html
@@ -1,3 +1,5 @@
-<app-button [type]="buttonType" (click)="onClick()">
-  <app-icon [icon]="toggled ? 'times' : 'pencil'"></app-icon>
-</app-button>
+<app-button 
+  [type]="buttonType" 
+  (click)="onClick()"
+  [icon]="toggled ? 'times' : 'pencil'"
+></app-button>
