--- a/src/app/molecules/list/list.component.html
+++ b/src/app/molecules/list/list.component.html
@@ -7,10 +7,9 @@
         class="ms-3"
         [type]="'PRIMARY'" 
         [size]="'SMALL'" 
+        [icon]="'plus'"
         (click)="onCreateButtonClick()"
-      >
-        <app-icon [icon]="'plus'"></app-icon>
-      </app-button>
+      ></app-button>
     </ng-container>
   </div>
   
