--- a/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -28,7 +28,10 @@
 </div>
 
 <ng-template #customDay let-date>
-  <app-button class="datepicker-day" [type]="'LIGHT'" [disabled]="!!props.disabled">
-    {{ date.day }}
-  </app-button>
+  <app-button 
+    class="datepicker-day" 
+    [type]="'LIGHT'" 
+    [disabled]="!!props.disabled"
+    [text]="date.day"
+  ></app-button>
 </ng-template>
