--- a/src/app/detail/image-carousel-card/image-carousel-card.component.html
+++ b/src/app/detail/image-carousel-card/image-carousel-card.component.html
@@ -101,12 +101,20 @@
         Do you really want to delete this image?
       </span>
       <div class="confirmation__button-container">
-        <app-button class="confirmation__button" [type]="'DARK'" (click)="onCancel()">
-          No
-        </app-button>
-        <app-button class="confirmation__button" [type]="'DANGER'" (click)="onSubmit(undefined)">
-          Yes
-        </app-button>
+        <app-button 
+          class="confirmation__button" 
+          [type]="'DARK'" 
+          [icon]="'times'"
+          [text]="'No'"
+          (click)="onCancel()"
+        ></app-button>
+        <app-button 
+          class="confirmation__button" 
+          [type]="'DANGER'"
+          [icon]="'trash'"
+          [text]="'Yes'" 
+          (click)="onSubmit(undefined)"
+        ></app-button>
       </div>
     </div>
   </div>
