--- a/src/app/molecules/formly-file-field/formly-file-field.component.html
+++ b/src/app/molecules/formly-file-field/formly-file-field.component.html
@@ -4,23 +4,10 @@
     [class.disabled]="props.disabled" 
     [disabled]="!!props.disabled"
     [type]="buttonType" 
+    [icon]="'upload'"
+    [text]="'Choose a file'"
     (click)="onButtonClick($event)"
-  >
-    <app-icon [icon]="'upload'" class="me-2"></app-icon>
-    <span>
-      Choose a file
-    </span>
-    <input 
-      #fileInputElement
-      type="file" 
-      class="d-none"
-      (change)="onFileSelect($event)"
-      [formControl]="formControl" 
-      [formlyAttributes]="field" 
-      [id]="props['name']" 
-      [name]="props['name']"
-    >
-  </app-button>
+  ></app-button>
   <div class="mt-2">
     <div *ngIf="selectedFileName; else noFileSelected"> 
       <span class="me-3"> Currently Selected: </span>
@@ -28,6 +15,17 @@
     </div>
   </div>
 </div>
+
+<input 
+#fileInputElement
+  type="file" 
+  class="d-none"
+  (change)="onFileSelect($event)"
+  [formControl]="formControl" 
+  [formlyAttributes]="field" 
+  [id]="props['name']" 
+  [name]="props['name']"
+>
 
 <ng-template #noFileSelected>
   No File Selected
