--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,27 @@
 	}
 }
 
+h1, h2, h3, h4, h5, h6 {
+	color: #ffffff;
+	font-weight: bold!important;
+	line-height: 1.5;
+	margin: 0 0 1rem 0;
+	text-transform: uppercase;
+	letter-spacing: 0.05rem;
+}
+
+
+h1{
+	letter-spacing: 0.5rem!important;
+	font-size: 2.25rem!important;
+	line-height: 1.3!important;
+}
+
+h2{
+	letter-spacing: 0.2rem!important;
+	font-size: 1.5rem!important;
+}
+
 blockquote{
 	border-left: solid 4px var(--bs-white);
 	font-style: italic;
