--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,14 @@
 @import 'bootstrap/scss/bootstrap'; //Must be imported after custom_bootstrap so that values from custom_bootstrap are available for overriding
 @import './variables.scss';
 
+html{
+	font-size: 16px;
+}
+
+body{
+	font-family: "Source Sans Pro", sans-serif;
+}
+
 .highlight{
 	background-color: var(--highlight-gray);
 }
