--- a/src/app/organisms/sidebar/sidebar.component.scss
+++ b/src/app/organisms/sidebar/sidebar.component.scss
@@ -7,6 +7,7 @@ a {
 :host {
   --entry-hover-color: var(--bs-link-hover-color);
   --entry-hover-bg-color: var(--bs-gray-700);
+  --brand-height: 3rem;
 }
 
 
@@ -74,14 +75,14 @@ a {
 
 .brand{
   display: flex;
-  height: 3rem;
+  height: var(--brand-height);
   font-size: 1.5rem;
   
   &__back{
     :hover{
       color: var(--entry-hover-color);
       background-color: var(--entry-hover-bg-color);
-      height: 100%;
+      height: var(--brand-height);
     }
   }
   
@@ -101,7 +102,7 @@ a {
   }
   
   &__home {
-    height: 100%;
+    height: var(--brand-height);
     flex: 1;
     
     :hover{
