Replicate discord sidebar behaviour

--- a/src/app/organisms/page/page.component.html
+++ b/src/app/organisms/page/page.component.html
@@ -1,17 +1,26 @@
-<div class="page">
-  <app-sidebar
-    class="page__sidebar"
-    [campaign]="campaign"
-    [user]="user"
-  ></app-sidebar>
-  
-  <app-page-container class="page__content">
-    <router-outlet #routerOutlet></router-outlet>
-  </app-page-container>
-</div>
+<app-sidebar
+#sidebar
+class="sidebar"
+[campaign]="campaign"
+[user]="user"
+></app-sidebar>
 
-<app-page-background
-  class="page__background"
-  [imageUrl]="campaign.background_image"
-  [serverUrl]="serverUrl"
-></app-page-background>
+<div 
+  class="page" 
+  [class.page--shift-right]="showSidebar" 
+  #content
+>
+  
+  <div class="page__content">  
+    <app-page-container>
+      <router-outlet #routerOutlet></router-outlet>
+    </app-page-container>
+  </div>
+  
+  <app-page-background
+    #background
+    class="page__background"
+    [imageUrl]="campaign.background_image"
+    [serverUrl]="serverUrl"
+  ></app-page-background>
+</div>
