--- a/src/app/organisms/page/page.component.scss
+++ b/src/app/organisms/page/page.component.scss
@@ -1,20 +1,62 @@
+@import '../../../screens.scss';
+
+:host{
+  --sb-width: 20rem;
+  --sb-width-neg: -20rem;
+  
+  display: flex;
+  @media(max-width: $small-screen){
+    display: unset;
+  }
+}
+
+.sidebar{
+  height: 100%;
+  width: var(--sb-width);
+  
+  @media(max-width: $small-screen){
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -3;
+  }
+}
+
 .page{
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
   
-  &__background{
-		position: fixed;
-		top: 0;
-		left: 0;
-		z-index: -2;
-		width: 100%;
-		height: 100%;
-	} 
+  @media(max-width: $small-screen){
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: margin-left 0.1s ease-out;
+  }
+  
+  &--shift-right{
+    margin-left: var(--sb-width);
+  }
   
   &__content{
     padding: var(--spacer-0) var(--spacer-2);
     width: 100%;
     height: 100%;
+  }
+  
+  &__background{
+    position: absolute;
+    transition: margin-left 0.1s ease-out;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    
+    &--shift-right{
+      margin-left: var(--sb-width);
+    }
   }
 }
