--- a/src/app/organisms/sidebar/sidebar.component.scss
+++ b/src/app/organisms/sidebar/sidebar.component.scss
@@ -12,17 +12,14 @@ a {
 
 
 .sidebar{
-    height: 100vh;
-    width: 20rem;
-    max-width: 40rem;
     background-color: var(--bs-gray-dark);
     overflow-y: auto;
     overflow-x: hidden; //Necessary because when sidebar folds out, x scrollbar appears
     display: flex;
     flex-direction: column;
-    border-right-color: var(--bs-white);
-    border-right-width: 1px;
-    border-right-style: outset;
+    height: inherit;
+    width: inherit;
+    max-width: inherit;
     
     &__brand{
       list-style-type: none;
