Fix selector stuff

--- a/src/app/molecules/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/molecules/confirmation-modal/confirmation-modal.component.html
@@ -9,7 +9,7 @@
     </div>
     
     <div class="modal-body">
-      <ng-content select="body"></ng-content>
+      <ng-content select="[body]"></ng-content>
       <div class="mb-1">
         <app-button 
           class="me-3" 
