--- a/src/app/login/quest-table/quest-table.component.scss
+++ b/src/app/login/quest-table/quest-table.component.scss
@@ -1,24 +1,25 @@
 @import '../../../screens.scss';
 
+:host{
+  --table-bg: var(--bs-gray-dark); 
+  --table-striped-bg: #3a3a3a; 
+}
+
 .heading{
   margin-bottom: var(--spacer-3);
   
   &__text{
     margin-top: auto;
     margin-bottom: auto;
-    padding-left: var(--spacer-0);
-    padding-right: var(--spacer-0);
+    padding-left: var(--spacer-0) !important;
+    padding-right: var(--spacer-0) !important;
   }
   
   &__select{
-    background-color: var(--bs-gray-700);
-    height: calc(1.5em + .75rem + 2px);
-    font-size: .9375rem;
-    line-height: 1.5;
-    background-clip: padding-box;
-    border: 1px solid var(--bs-gray-900);
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    background-color: var(--table-striped-bg);
+    height: var(--spacer-5);
+    border: 1px solid var(--table-bg);
+    border-radius: var(--bs-border-radius);
     color: var(--bs-white);
   }
 }
@@ -28,7 +29,16 @@
   
   &__element{
     padding: var(--spacer-3) var(--spacer-4) !important;
-      
+    
+    :hover{
+      color: var(--bs-link-hover-color);
+    }
+    
+    &--link{
+      cursor: pointer;
+      text-decoration: underline;
+    }
+    
     &--desktop-only{
       @media(max-width: $medium-screen){
         display: none;
