--- a/src/app/organisms/filter-list/filter-list.component.html
+++ b/src/app/organisms/filter-list/filter-list.component.html
@@ -14,7 +14,43 @@
 </form>
 
 <div class="row">
+  <ng-container *ngIf="mode === 'LETTER'; then letterList; else propertyList"></ng-container>
+</div>
+
+<ng-template #letterList>
   <ng-container *ngFor="let itemLetterEntries of displayEntries | groupByFirstLetter: labelProp">
+    <div 
+      class="letter-list" 
+      [ngClass]="{
+        'col-sm-6 col-lg-4': !filterInputElement.value, 
+        'col-12': filterInputElement.value
+      }"
+    >
+      <!-- Letter Heading -->
+      <ng-container *ngIf="filterInputElement.value.length === 0">
+        <h5 class="letter-list__heading"> 
+          {{ itemLetterEntries.key }} 
+        </h5>            
+      </ng-container>
+
+      <!-- Article List -->
+      <ul class="letter-list__list">
+        <ng-container *ngFor="let item of itemLetterEntries.value">
+          <li>
+            <a [routerLink]="item.link">
+              {{ item[labelProp] }}
+            </a>
+          </li>
+        </ng-container>
+      </ul>
+    </div>
+  </ng-container>
+</ng-template>
+
+<ng-template #propertyList>
+  <ng-container *ngIf="groupProp">
+    
+    <ng-container *ngFor="let itemLetterEntries of displayEntries | groupBy: groupProp : labelProp">
       <div 
         class="letter-list" 
         [ngClass]="{
@@ -28,7 +64,7 @@
             {{ itemLetterEntries.key }} 
           </h5>            
         </ng-container>
-
+  
         <!-- Article List -->
         <ul class="letter-list__list">
           <ng-container *ngFor="let item of itemLetterEntries.value">
@@ -40,6 +76,7 @@
           </ng-container>
         </ul>
       </div>
+    </ng-container>
+    
   </ng-container>
-
-</div>
+</ng-template>
