--- a/src/screens.scss
+++ b/src/screens.scss
@@ -1,4 +1,4 @@
-@import 'bootstrap/scss/bootstrap';
+@import '/node_modules/bootstrap/scss/bootstrap.scss';
 
 $xxlarge-screen: map-get($grid-breakpoints, xxl);
 $xlarge-screen: map-get($grid-breakpoints, xl);
