--- a/src/app/organisms/page/page.component.scss
+++ b/src/app/organisms/page/page.component.scss
@@ -1,27 +1,28 @@
-@import '../../../screens.scss';
+@import 'bootstrap/scss/bootstrap';
 
 :host{
   --sb-width: 20rem;
   --sb-width-neg: -20rem;
   --sb-margin: calc(calc(var(--sb-width) * 0.9));
   
-  display: flex;
-  @media(max-width: $small-screen){
-    display: unset;
+  display: unset;
+  @include media-breakpoint-up(md){
+    display: flex;
   }
 }
 
 .sidebar{
-  width: var(--sb-width);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -3;    
   height: 100vh;
-  width: 20rem;
   max-width: 90vw;
+  width: var(--sb-width);
   
-  @media(max-width: $small-screen){
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -3;
+  @include media-breakpoint-up(md){
+    position: unset;
+    z-index: unset;
   }
 }
 
@@ -31,12 +32,13 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: margin-left 0.1s ease-out;
   
-  @media(max-width: $small-screen){
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: margin-left 0.1s ease-out;
+  @include media-breakpoint-up(md){
+    position: unset;
   }
   
   &--shift-right{
