--- a/src/app/detail/image-carousel/image-carousel.component.scss
+++ b/src/app/detail/image-carousel/image-carousel.component.scss
@@ -1,12 +1,12 @@
-@import '../../../screens.scss';
+@import 'bootstrap/scss/bootstrap';
 
 .image-container img{
   object-fit: contain;
   width: 100%;
-  max-height: 18rem;
-
-  @media only screen and (max-width: $medium-screen) {
-      max-height: 10rem;
+  max-height: 10rem;
+  
+  @include media-breakpoint-up(md){
+    max-height: 18rem;
   }
 }
 
