--- a/src/app/detail/sessionaudio-card/sessionaudio-card.component.scss
+++ b/src/app/detail/sessionaudio-card/sessionaudio-card.component.scss
@@ -1,4 +1,4 @@
-@import '../../../screens.scss';
+@import 'bootstrap/scss/bootstrap';
 
 .card{
   margin: var(--spacer-3);
@@ -11,15 +11,15 @@
   &-body{
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    
-    @media(max-width: $small-screen){
-      flex-direction: column;
-    }
+    flex-direction: column;
   }
   
   &-link{
     text-align: center;
     margin-bottom: var(--spacer-2);
+    margin-left: var(--spacer-0) !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
