--- a/src/app/organisms/page-container/page-container.component.scss
+++ b/src/app/organisms/page-container/page-container.component.scss
@@ -1,5 +1,4 @@
-@import '../../../screens.scss';
-
+@import 'bootstrap/scss/bootstrap';
 
 .page{
 	width: 100%;
@@ -20,17 +19,12 @@
 		width: 100%;
 		background-color: var(--wiki-bg-transparent);
 		border-radius: var(--bs-border-radius);
-		padding: var(--spacer-5);
+		padding: var(--spacer-3) var(--spacer-3) var(--spacer-5) var(--spacer-3);
 		margin-bottom: var(--spacer-4);
 		color: white;
-	}
-}
-
-
-@media(max-width: $large-screen){
-	.page{
-		&__foreground{
-			padding: var(--spacer-3) var(--spacer-3) var(--spacer-5) var(--spacer-3);
+		
+		@include media-breakpoint-up(lg){
+			padding: var(--spacer-5);
 		}
 	}
 }
