--- a/src/app/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/molecules/small-create-form/small-create-form.component.html
@@ -22,7 +22,7 @@
 </ng-template>
 
 <ng-template #createState>
-  <form class="form">
+  <form class="form" (keydown.enter)="onSubmit()">
     <select class="form-select"
       style="width: unset;"
       [name]="'select-' + labelProp"
