Remove campaignName from encounter Input
You can extract which campaign is currently selected from the provided datatype

--- a/src/app/detail/encounter/encounter.component.html
+++ b/src/app/detail/encounter/encounter.component.html
@@ -68,8 +68,8 @@
         [entries]="badgeEntries"
         [createOptions]="{
           options: characters,
-          valueProp: 'name',
-          labelProp: 'pk',
+          valueProp: 'pk',
+          labelProp: 'name',
         }"
         [canCreate]="canCreate"
         [canDelete]="canDelete"
