--- a/src/app/atoms/button/button.component.scss
+++ b/src/app/atoms/button/button.component.scss
@@ -1,9 +1,13 @@
-.btn-disabled{
-  cursor: not-allowed;
-}
-
 .btn{
   &__icon{
     margin-right: var(--spacer-1);
+  }
+  
+  &-disabled{
+    cursor: not-allowed;
+  }
+  
+  &-lg{
+    font-weight: bold;
   }
 }
