--- a/src/app/atoms/card/card.component.scss
+++ b/src/app/atoms/card/card.component.scss
@@ -2,11 +2,14 @@
 
 :host{
   --card-bg-color: #{$card-bg};
+  --card-flex-direction: column;
+  --card-padding: var(--spacer-4);
 }
 
 .card{
   background-color: var(--card-bg-color);
   margin-top: var(--spacer-3);
   margin-bottom: var(--spacer-3);
-  padding: var(--spacer-4);
+  padding: var(--card-padding);
+  flex-direction: var(--card-flex-direction);
 }
