--- a/src/app/detail/encounter/encounter.component.scss
+++ b/src/app/detail/encounter/encounter.component.scss
@@ -25,6 +25,10 @@
     width: 100%;
     --confirmation-bg-color: var(--bs-dark);
   }
+  
+  &__edit-button{
+    align-self: flex-start;
+  }
 }
 
 .connections{
