Enable collapsible panel to be controlled from the outside

--- a/src/app/molecules/collapsible-panel/collapsible-panel.component.html
+++ b/src/app/molecules/collapsible-panel/collapsible-panel.component.html
@@ -1,7 +1,7 @@
 <div class="card" #panel>
   <h5 class="card__heading" (click)="togglePanel()">
     <span>
-      <ng-content select="[heading]"></ng-content>
+      {{heading}}
     </span>
     
     <app-icon 
