--- a/src/app/detail/rules/rules.component.html
+++ b/src/app/detail/rules/rules.component.html
@@ -13,7 +13,13 @@
   <div class="row">
     <ng-container *ngFor="let card of ruleCards; let i = index">
       <div class="list__rule-card rule-card">
-        <app-collapsible-panel [heading]="card.rule.name" [isOpen]="card.isOpen"> 
+        <app-collapsible-panel 
+          [heading]="card.rule.name" 
+          [isOpen]="card.isOpen"
+          [ngClass]="{
+            'animate__animated animate__zoomIn': card.rule.pk == null
+          }"
+        > 
           <app-rule
             body
             class="rule-card__rule"
