--- a/src/app/design/molecules/collapsible-panel/collapsible-panel.component.scss
+++ b/src/app/design/molecules/collapsible-panel/collapsible-panel.component.scss
@@ -8,4 +8,9 @@
     cursor: pointer;
     margin-bottom: 0px;
   }
+  
+  &__heading-text{
+    flex: 1;
+    margin-right: var(--spacer-4);
+  }
 }
